--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,4 @@ REACT_APP_NODE_2 = "https://bsc-dataseed.binance.org"
 # 10+ nodes balanced in each region, global
 REACT_APP_NODE_3 = "https://bsc-dataseed.binance.org"
 
+REACT_APP_BSCSCAN_API_KEY = "3CHX21V38V8PXG4WFFAM8PXYKV9NCQM93E"
